packages/swc/tests/errors/array/local_variable/output.ts
[
    "x"
];
[
    "x"
];
nameof.array((x)=>[
        nameof.full(x)
    ]);
nameof.array((x)=>[
        nameof.full<typeof x>()
    ]);
